[gd_scene load_steps=6 format=3 uid="uid://bfa1sa7r8du4j"]

[ext_resource type="Script" path="res://Scripts/UI Panel/JoinWorld.gd" id="1_1872p"]
[ext_resource type="FontFile" uid="uid://cc30qdd0p2cgs" path="res://Fonts/Gluten-Bold.ttf" id="2_hsq1c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h67ig"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_k7a2x"]
base_font = ExtResource("2_hsq1c")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s5yv"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 15.0
expand_margin_right = 15.0

[node name="JoinWorld" type="Panel"]
offset_right = 800.0
offset_bottom = 450.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h67ig")
script = ExtResource("1_1872p")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 1, 0.847059, 1)
theme_override_fonts/font = SubResource("FontVariation_k7a2x")
theme_override_font_sizes/font_size = 41
text = "Join World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 77.0
offset_bottom = 49.0
text = "Back"

[node name="WorldNameEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 342.0
offset_top = 164.0
offset_right = 529.0
offset_bottom = 195.0
text = "Wonderful World"
alignment = 1

[node name="AddressEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 342.0
offset_top = 206.0
offset_right = 529.0
offset_bottom = 237.0
placeholder_text = "IP"
alignment = 1

[node name="PortSpinBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 343.0
offset_top = 249.0
offset_right = 529.0
offset_bottom = 280.0
max_value = 65535.0
value = 37979.0
alignment = 1

[node name="NameTxt" type="Label" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 166.0
offset_right = 334.0
offset_bottom = 193.0
text = "Name:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AdressTxt" type="Label" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 208.0
offset_right = 334.0
offset_bottom = 235.0
text = "Address:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PortTxt" type="Label" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 252.0
offset_right = 335.0
offset_bottom = 277.0
text = "Port:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 390.0
offset_right = 413.0
offset_bottom = 421.0
theme_override_styles/normal = SubResource("StyleBoxFlat_1s5yv")
theme_override_styles/hover = SubResource("StyleBoxFlat_1s5yv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1s5yv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_1s5yv")
theme_override_styles/focus = SubResource("StyleBoxFlat_1s5yv")
text = "Join"

[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
[connection signal="text_changed" from="WorldNameEdit" to="." method="_on_world_name_edit_text_changed"]
[connection signal="text_changed" from="AddressEdit" to="." method="_on_address_edit_text_changed"]
[connection signal="value_changed" from="PortSpinBox" to="." method="_on_port_spin_box_value_changed"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
